# MakeMe

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_timescale_hypertables.py
backend/app/: main.py
backend/app/agent/: __init__.py  features.py  learner.py  llm_advisor.py  memory.py  pattern_detector.py  rules.py  scheduler.py  state.py
backend/app/api/: activity.py  auth.py  events.py  insights.py  integrations.py  location.py  schedules.py  tasks.py  users.py  ws.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  security.py
backend/app/integrations/: __init__.py  base.py  registry.py
backend/app/integrations/apple_caldav/: mapper.py  provider.py
backend/app/integrations/google_calendar/: mapper.py  provider.py
backend/app/integrations/microsoft_365/: mapper.py  (+1 more)
backend/app/models/: __init__.py  activity_log.py  base.py  event.py  integration_config.py  location.py  schedule.py  task.py  travel_time.py  user.py
backend/app/schemas/: activity.py  auth.py  event.py  integration.py  location.py  schedule.py  task.py  user.py
backend/app/services/: schedule_service.py  sync_service.py  travel_time_service.py
backend/app/ws/: hub.py
backend/tests/: conftest.py  test_activity.py  test_auth.py  test_integrations.py  test_learner.py  test_location.py  test_phase6.py  test_scheduler.py  test_tasks.py  test_ws.py
backend/workers/: agent_worker.py  celery_app.py  sync_worker.py
(+53 files in other folders)
